--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 }
 
 header{
-    background-image: url(Images1/CarbonCustomLogo.png);
+    background-image: url(https://imgtr.ee/images/2023/06/17/YNNKb.png);
     height: 250px;
     background-repeat: no-repeat;
     background-size: auto;
