Atualizar o index.css

--- a/index.css
+++ b/index.css
@@ -127,3 +127,9 @@ main{
     cursor: pointer;
     text-decoration: underline;
 }
+
+#galeria>div{
+width: 200px;
+length: 100px;
+border: 5px red solid;
+}
