--- a/index.css
+++ b/index.css
@@ -47,7 +47,7 @@ a>img{
 
 main{
     background-image: url(https://i.postimg.cc/9QfQrN1R/23a394f8348872496b2e5bca69f61434.jpg);
-    height: 300px;
+    height: 1000px;
 }
 
 #supTab{
@@ -104,6 +104,7 @@ main{
      font-size: 30px;
      font-weight: bolder;
      text-align: center;
+     align-items: center;
      
 }
 
